--- a/TP4_ListasEjercicio2/TP4_ListasEjercicio2.csproj
+++ b/TP4_ListasEjercicio2/TP4_ListasEjercicio2.csproj
@@ -52,10 +52,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ActualizarAlumno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ActualizarAlumno.Designer.cs">
+      <DependentUpon>ActualizarAlumno.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListaAlumnos.cs" />
     <Compile Include="Nodo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ActualizarAlumno.resx">
+      <DependentUpon>ActualizarAlumno.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
