--- a/POO/Integrador_Numero1/Integrador_Numero1_PRACTICA/Integrador_Numero1_PRACTICA.csproj
+++ b/POO/Integrador_Numero1/Integrador_Numero1_PRACTICA/Integrador_Numero1_PRACTICA.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gestores\GestorAutoPersonaVista.cs" />
+    <Compile Include="Gestores\GestorAutos.cs" />
+    <Compile Include="Gestores\GestorPersonas.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
