--- a/DAS/EmpresaCanales/UI/UI.csproj
+++ b/DAS/EmpresaCanales/UI/UI.csproj
@@ -66,11 +66,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RankingSeries.cs">
+    <Compile Include="FormEstadisticas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RankingSeries.Designer.cs">
-      <DependentUpon>RankingSeries.cs</DependentUpon>
+    <Compile Include="FormEstadisticas.Designer.cs">
+      <DependentUpon>FormEstadisticas.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="FormInicial.resx">
       <DependentUpon>FormInicial.cs</DependentUpon>
@@ -90,8 +90,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="RankingSeries.resx">
-      <DependentUpon>RankingSeries.cs</DependentUpon>
+    <EmbeddedResource Include="FormEstadisticas.resx">
+      <DependentUpon>FormEstadisticas.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
