--- a/DAS/JuanSinTacc/BLL/BLL.csproj
+++ b/DAS/JuanSinTacc/BLL/BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BLLProducto.cs" />
     <Compile Include="BLLTipo.cs" />
     <Compile Include="BLLUsuario.cs" />
+    <Compile Include="BLLVenta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
