--- a/DAS/JuanSinTacc/MPP/MPP.csproj
+++ b/DAS/JuanSinTacc/MPP/MPP.csproj
@@ -45,6 +45,7 @@
     <Compile Include="MPPProducto.cs" />
     <Compile Include="MPPTipo.cs" />
     <Compile Include="MPPUsuario.cs" />
+    <Compile Include="MPPVenta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
